--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
           <a href="#"><i class="fas fa-dog"></i>Animaux autorisés</a>
         </div>
       </div>
+      <div id="informations">
+        <p>
+          <i class="fas fa-info fa-xs"></i>Plus de 500 logements sont
+          disponibles dans cette ville
+        </p>
+      </div>
       <section>
         <div id="herbergementsMarseille"></div>
       </section>
