--- a/index.html
+++ b/index.html
@@ -49,12 +49,27 @@
           disponibles dans cette ville
         </p>
       </div>
-      <section>
-        <div id="herbergementsMarseille"></div>
+      <section id="hebergements">
+        <div id="hebergementsMarseille">
+          <h1>Hébergements à Marseille</h1>
+          <div id="cCd">
+            <div id="cannebiere"></div>
+            <div id="cannebiereDesc">
+              <ul>
+                <li>Auberge la cannebière</li>
+                <li>Nuit à partir de 25€</li>
+                <li>
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i
+                  ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                  ><i class="fas fa-star"></i>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <aside id="populaires"><h1>Les plus populaires</h1></aside>
       </section>
-      <aside>
-        <div id="populaires"></div>
-      </aside>
       <section>
         <div id="activites"></div>
       </section>
