--- a/index.html
+++ b/index.html
@@ -52,18 +52,102 @@
       <section id="hebergements">
         <div id="hebergementsMarseille">
           <h1>Hébergements à Marseille</h1>
-          <div id="cCd">
-            <div id="cannebiere"></div>
-            <div id="cannebiereDesc">
-              <ul>
-                <li>Auberge la cannebière</li>
-                <li>Nuit à partir de 25€</li>
-                <li>
-                  <i class="fas fa-star"></i><i class="fas fa-star"></i
-                  ><i class="fas fa-star"></i><i class="fas fa-star"></i
-                  ><i class="fas fa-star"></i>
-                </li>
-              </ul>
+          <div id="hebGeneral">
+            <div class="hebCont" id="hebCan">
+              <button>
+                <div class="hebPhoto" id="canPhoto"></div>
+                <div class="hebDesc">
+                  <p>Auberge la Cannebière</p>
+                  <p>Nuit à partir de <strong>25€</strong></p>
+                  <div class="notesEtoiles">
+                    <i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i>
+                  </div>
+                </div>
+              </button>
+            </div>
+            <div class="hebCont" id="hebHp">
+              <button>
+                <div class="hebPhoto" id="hpPhoto"></div>
+                <div class="hebDesc">
+                  <p>Hôtel du port</p>
+                  <p>Nuit à partir de 52<strong>€</strong></p>
+                  <div class="notesEtoiles">
+                    <i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i>
+                  </div>
+                </div>
+              </button>
+            </div>
+            <div class="hebCont" id="hebHm">
+              <button>
+                <div class="hebPhoto" id="hmPhoto"></div>
+                <div class="hebDesc">
+                  <p>Hôtel Les mouettes</p>
+                  <p>Nuit à partir de 76<strong>€</strong></p>
+                  <div class="notesEtoiles">
+                    <i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i>
+                  </div>
+                </div>
+              </button>
+            </div>
+            <div class="hebCont" id="hebHme">
+              <button>
+                <div class="hebPhoto" id="hmePhoto"></div>
+                <div class="hebDesc">
+                  <p>Hôtel de la mer</p>
+                  <p>Nuit à partir de 46<strong>€</strong></p>
+                  <div class="notesEtoiles">
+                    <i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i>
+                  </div>
+                </div>
+              </button>
+            </div>
+            <div class="hebCont" id="hebPan">
+              <button>
+                <div class="hebPhoto" id="panPhoto"></div>
+                <div class="hebDesc">
+                  <p>Auberge Le Panier</p>
+                  <p>Nuit à partir de <strong>23€</strong></p>
+                  <div class="notesEtoiles">
+                    <i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i>
+                  </div>
+                </div>
+              </button>
+            </div>
+            <div class="hebCont" id="hebHa">
+              <button>
+                <div class="hebPhoto" id="haPhoto"></div>
+                <div class="hebDesc">
+                  <p>Hôtel chez Amina</p>
+                  <p>Nuit à partir de 96<strong>€</strong></p>
+                  <div class="notesEtoiles">
+                    <i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i
+                    ><i class="fas fa-star fa-xs"></i>
+                  </div>
+                </div>
+              </button>
             </div>
           </div>
         </div>
