--- a/index.html
+++ b/index.html
@@ -54,105 +54,143 @@
           <h1>Hébergements à Marseille</h1>
           <div id="hebGeneral">
             <div class="hebCont" id="hebCan">
-              <button>
-                <div class="hebPhoto" id="canPhoto"></div>
-                <div class="hebDesc">
-                  <p>Auberge la Cannebière</p>
-                  <p>Nuit à partir de <strong>25€</strong></p>
-                  <div class="notesEtoiles">
-                    <i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i>
-                  </div>
+              <div class="hebPhoto" id="canPhoto"></div>
+              <div class="hebDesc">
+                <p>Auberge la Cannebière</p>
+                <p>Nuit à partir de <strong>25€</strong></p>
+                <div class="notesEtoiles">
+                  <i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i>
                 </div>
-              </button>
+              </div>
             </div>
             <div class="hebCont" id="hebHp">
-              <button>
-                <div class="hebPhoto" id="hpPhoto"></div>
-                <div class="hebDesc">
-                  <p>Hôtel du port</p>
-                  <p>Nuit à partir de 52<strong>€</strong></p>
-                  <div class="notesEtoiles">
-                    <i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i>
-                  </div>
+              <div class="hebPhoto" id="hpPhoto"></div>
+              <div class="hebDesc">
+                <p>Hôtel du port</p>
+                <p>Nuit à partir de 52<strong>€</strong></p>
+                <div class="notesEtoiles">
+                  <i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i>
                 </div>
-              </button>
+              </div>
             </div>
             <div class="hebCont" id="hebHm">
-              <button>
-                <div class="hebPhoto" id="hmPhoto"></div>
-                <div class="hebDesc">
-                  <p>Hôtel Les mouettes</p>
-                  <p>Nuit à partir de 76<strong>€</strong></p>
-                  <div class="notesEtoiles">
-                    <i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i>
-                  </div>
+              <div class="hebPhoto" id="hmPhoto"></div>
+              <div class="hebDesc">
+                <p>Hôtel Les mouettes</p>
+                <p>Nuit à partir de 76<strong>€</strong></p>
+                <div class="notesEtoiles">
+                  <i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i>
                 </div>
-              </button>
+              </div>
             </div>
             <div class="hebCont" id="hebHme">
-              <button>
-                <div class="hebPhoto" id="hmePhoto"></div>
-                <div class="hebDesc">
-                  <p>Hôtel de la mer</p>
-                  <p>Nuit à partir de 46<strong>€</strong></p>
-                  <div class="notesEtoiles">
-                    <i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i>
-                  </div>
+              <div class="hebPhoto" id="hmePhoto"></div>
+              <div class="hebDesc">
+                <p>Hôtel de la mer</p>
+                <p>Nuit à partir de 46<strong>€</strong></p>
+                <div class="notesEtoiles">
+                  <i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i>
                 </div>
-              </button>
+              </div>
             </div>
             <div class="hebCont" id="hebPan">
-              <button>
-                <div class="hebPhoto" id="panPhoto"></div>
-                <div class="hebDesc">
-                  <p>Auberge Le Panier</p>
-                  <p>Nuit à partir de <strong>23€</strong></p>
-                  <div class="notesEtoiles">
-                    <i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i>
-                  </div>
+              <div class="hebPhoto" id="panPhoto"></div>
+              <div class="hebDesc">
+                <p>Auberge Le Panier</p>
+                <p>Nuit à partir de <strong>23€</strong></p>
+                <div class="notesEtoiles">
+                  <i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i>
                 </div>
-              </button>
+              </div>
             </div>
             <div class="hebCont" id="hebHa">
-              <button>
-                <div class="hebPhoto" id="haPhoto"></div>
-                <div class="hebDesc">
-                  <p>Hôtel chez Amina</p>
-                  <p>Nuit à partir de 96<strong>€</strong></p>
-                  <div class="notesEtoiles">
-                    <i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i
-                    ><i class="fas fa-star fa-xs"></i>
-                  </div>
+              <div class="hebPhoto" id="haPhoto"></div>
+              <div class="hebDesc">
+                <p>Hôtel chez Amina</p>
+                <p>Nuit à partir de 96<strong>€</strong></p>
+                <div class="notesEtoiles">
+                  <i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i>
                 </div>
-              </button>
+              </div>
             </div>
           </div>
+          <a href="#">Afficher plus</a>
         </div>
 
-        <aside id="populaires"><h1>Les plus populaires</h1></aside>
+        <aside id="populaires">
+          <div id="titreIconePop">
+            <h2>Les plus populaires</h2>
+            <i class="fa fa-chart-line fa-lg"></i>
+          </div>
+          <div id="popGeneral">
+            <div class="popCont" id="popSolm">
+              <div class="popPhoto" id="solmPhoto"></div>
+              <div class="popDesc">
+                <p>Hôtel Le soleil du matin</p>
+                <p>Nuit à partir de 128<strong>€</strong></p>
+                <div class="popNotesEtoiles">
+                  <i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i>
+                </div>
+              </div>
+            </div>
+            <div class="popCont" id="popAcdl">
+              <div class="popPhoto" id="acdlPhoto"></div>
+              <div class="popDesc">
+                <p>Au coeur de l'eau Chambres d'hôtes</p>
+                <p>Nuit à partir de 71<strong>€</strong></p>
+                <div class="popNotesEtoiles">
+                  <i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i>
+                </div>
+              </div>
+            </div>
+            <div class="popCont" id="popHbb">
+              <div class="popPhoto" id="hbbPhoto"></div>
+              <div class="popDesc">
+                <p>Hôtel Tout bleu et Blanc</p>
+                <p>Nuit à partir de 68<strong>€</strong></p>
+                <div class="popNotesEtoiles">
+                  <i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i
+                  ><i class="fas fa-star fa-xs"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </aside>
       </section>
       <section>
         <div id="activites"></div>
