--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="popCont" id="popAcdl">
               <div class="popPhoto" id="acdlPhoto"></div>
               <div class="popDesc">
-                <p>Au coeur de l'eau Chambres d'hôtes</p>
+                <p>Au coeur de l'eau <br />Chambres d'hôtes</p>
                 <p>Nuit à partir de 71<strong>€</strong></p>
                 <div class="popNotesEtoiles">
                   <i class="fas fa-star fa-xs"></i
