--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/ca67a0072e.js"
       crossorigin="anonymous"
     ></script>
+    <meta name="viewport" content="width=device-width" />
   </head>
 
   <body>
@@ -26,6 +27,7 @@
               </ul>
             </nav>
           </div>
+
           <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
 
           <h2>En plein centre ville ou en pleine nature</h2>
