--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/ca67a0072e.js"
       crossorigin="anonymous"
     ></script>
+    <meta name="viewport" content="width=device-width" />
   </head>
 
   <body>
@@ -17,21 +18,23 @@
           <a href="#"
             ><img src="media/images/logo/Reservia.svg" alt="logo"
           /></a>
+          <div id="inscription"><a href="#">S'inscrire</a></div>
           <nav>
             <ul>
-              <li><a href="#blocPage">Hébergements</a></li>
+              <li><a href="#hebergements">Hébergements</a></li>
               <li><a href="#activites">Activités</a></li>
-              <li><a href="#">S'inscrire</a></li>
             </ul>
           </nav>
         </div>
+
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
 
         <h2>En plein centre ville ou en pleine nature</h2>
         <div id="zoneRecherche">
-          <i class="fas fa-map-marker-alt"></i>
-          <input type="search" value="Marseille, France" />
-          <input type="button" value="Rechercher" />
+          <div id="mapMarker"><i class="fas fa-map-marker-alt fa-lg"></i></div>
+          <input type="search" placeholder="Marseille, France" />
+          <button><span>Rechercher</span><span><i class="fas fa-search"></i></i></span></button
+          ><!--<input type="button" value="Rechercher" />-->
         </div>
       </header>
       <div id="filtres">
@@ -45,8 +48,8 @@
       </div>
       <div id="informations">
         <p>
-          <i class="fas fa-info fa-xs"></i>Plus de 500 logements sont
-          disponibles dans cette ville
+          <i class="fas fa-info fa-xs"></i><span>Plus de 500 logements sont
+          disponibles dans cette ville</span>
         </p>
       </div>
       <section id="hebergements">
@@ -150,7 +153,7 @@
             <div class="popCont" id="popSolm">
               <div class="popPhoto" id="solmPhoto"></div>
               <div class="popDesc">
-                <p>Hôtel Le soleil du matin</p>
+                <p>Hôtel Le soleil du <br />matin</p>
                 <p>Nuit à partir de 128<strong>€</strong></p>
                 <div class="popNotesEtoiles">
                   <i class="fas fa-star fa-xs"></i
@@ -178,7 +181,7 @@
             <div class="popCont" id="popHbb">
               <div class="popPhoto" id="hbbPhoto"></div>
               <div class="popDesc">
-                <p>Hôtel Tout bleu et Blanc</p>
+                <p>Hôtel Tout bleu et <br />Blanc</p>
                 <p>Nuit à partir de 68<strong>€</strong></p>
                 <div class="popNotesEtoiles">
                   <i class="fas fa-star fa-xs"></i
@@ -192,12 +195,70 @@
           </div>
         </aside>
       </section>
-      <section>
-        <div id="activites"></div>
+      <section id="activites">
+        <h1>Activités à Marseille</h1>
+        <div id="actGeneral">
+          <div id="activitesP1">
+            <div class="actCont">
+              <div class="actPhoto" id="vpPhoto"></div>
+              <div class="actDesc">
+                <p>Vieux Port</p>
+              </div>
+            </div>
+            <div class="actCont">
+              <div class="actPhoto" id="fpPhoto"></div>
+              <div class="actDesc">
+                <p>Fort de Pomègues</p>
+              </div>
+            </div>
+            <div class="actCont">
+              <div class="actPhoto" id="ifPhoto"></div>
+              <div class="actDesc">
+                <p>Îles du Frioul</p>
+              </div>
+            </div>
+          </div>
+          <div id="activitesP2">
+            <div class="actCont">
+              <div class="actPhoto" id="pncPhoto"></div>
+              <div class="actDesc">
+                <p>Parc National des Calanques</p>
+              </div>
+            </div>
+            <div class="actCont">
+              <div class="actPhoto" id="ndPhoto"></div>
+              <div class="actDesc">
+                <p>Notre-Dame-de-la-Garde</p>
+              </div>
+            </div>
+            <div class="actCont">
+              <div class="actPhoto" id="plPhoto"></div>
+              <div class="actDesc">
+                <p>Parc Longchamp</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--</div>-->
       </section>
-      <footer>
-        <div id="aPropos"></div>
-      </footer>
     </div>
+    <footer>
+      <div id="aPropos">
+        <h1>A propos</h1>
+        <a href="#">Fonctionnement du site</a>
+        <a href="#">Conditions générales de vente</a>
+        <a href="#">Données et confidentialité</a>
+      </div>
+      <div id="nosHebergements">
+        <h1>Nos hébergements</h1>
+        <a href="#">Charte qualité</a>
+        <a href="#">Soumettre votre hôtel</a>
+      </div>
+      <div id="assistance">
+        <h1>Assistance</h1>
+        <a href="#">Centre d'aide</a>
+        <a href="#">Nous contacter</a>
+      </div>
+    </footer>
   </body>
 </html>
