Ajout attribut Alt sur les photos

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 <div class="hebPhoto">
                   <img
                     src="media/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                    alt="Cannebiere"
                   />
                 </div>
                 <div class="hebDesc">
@@ -93,6 +94,7 @@
                 <div class="hebPhoto">
                   <img
                     src="media/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                    alt="Hotel Port"
                   />
                 </div>
                 <div class="hebDesc">
@@ -113,6 +115,7 @@
                 <div class="hebPhoto">
                   <img
                     src="media/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                    alt="Hotel Mouettes"
                   />
                 </div>
                 <div class="hebDesc">
@@ -133,6 +136,7 @@
                 <div class="hebPhoto">
                   <img
                     src="media/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                    alt="Hotel Mer"
                   />
                 </div>
                 <div class="hebDesc">
@@ -153,6 +157,7 @@
                 <div class="hebPhoto">
                   <img
                     src="media/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                    alt="Auberge Panier"
                   />
                 </div>
                 <div class="hebDesc">
@@ -173,6 +178,7 @@
                 <div class="hebPhoto">
                   <img
                     src="media/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                    alt="Hotel Amina"
                   />
                 </div>
                 <div class="hebDesc">
@@ -203,6 +209,7 @@
                 <div class="popPhoto">
                   <img
                     src="media/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                    alt="Hotel Matin"
                   />
                 </div>
                 <div class="popDesc">
@@ -223,6 +230,7 @@
                 <div class="popPhoto">
                   <img
                     src="media/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                    alt="Coeur de l'eau"
                   />
                 </div>
                 <div class="popDesc">
@@ -243,6 +251,7 @@
                 <div class="popPhoto">
                   <img
                     src="media/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                    alt="Hotel Bleu Blanc"
                   />
                 </div>
                 <div class="popDesc">
@@ -271,6 +280,7 @@
                   <div class="actPhoto">
                     <img
                       src="media/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                      alt="Vieux Port"
                     />
                   </div>
                   <div class="actDesc">
@@ -285,6 +295,7 @@
                   <div class="actPhoto">
                     <img
                       src="media/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                      alt="Pomegues"
                     />
                   </div>
                   <div class="actDesc">
@@ -297,6 +308,7 @@
                   <div class="actPhoto">
                     <img
                       src="media/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                      alt="Frioul"
                     />
                   </div>
                   <div class="actDesc">
@@ -313,6 +325,7 @@
                   <div class="actPhoto">
                     <img
                       src="media/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                      alt="Calanques"
                     />
                   </div>
                   <div class="actDesc">
@@ -327,6 +340,7 @@
                   <div class="actPhoto">
                     <img
                       src="media/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                      alt="Notre Dame"
                     />
                   </div>
                   <div class="actDesc">
@@ -339,6 +353,7 @@
                   <div class="actPhoto">
                     <img
                       src="media/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                      alt="Longchamp"
                     />
                   </div>
                   <div class="actDesc">
